# multichip

./: .gitmodules  Makefile  README.md
.trunk/: trunk.yaml
rp2040/multichip_rp2040_firmware/: Cargo.toml  Makefile  memory.x  memory.x2  memory.x_  rust-toolchain.toml
rp2040/multichip_rp2040_firmware/.cargo/: config.toml
rp2040/multichip_rp2040_firmware/src/: main.rs
rp2040/multichip_rp2040_firmware/tools/: .gitignore
rv1106/: .gitignore  Dockerfile  Makefile  docker-compose.yml
rv1106/fs/: .gitignore
