[package]
name = "multichip-firmware-rp2040"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-sync = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt",] }
embassy-executor = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", ] }
embassy-time = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", ] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-pac", "time-driver", "run-from-ram", ] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", ] }
embassy-usb-logger = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }

static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
st7789 = "0.6.1"
log = "0.4.21"
rp2040-boot2 = { version = "0.3" }
embedded-graphics = "0.7.1"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-hal-async = "1.0"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
byte-slice-cast = { version = "1.2.0", default-features = false }
